--- a/src/Components/Home/slider/Slider.scss
+++ b/src/Components/Home/slider/Slider.scss
@@ -2,7 +2,8 @@ body{
   height:100%;
 }
 .img-slider{
-  background-image:url("asset/images/Slider/bulb.png");
+  // relative import do not work at compile time also react do not support root import i.e import outside src
+  // background-image:url("asset/");
   background-size: 100% 87%;
   background-position: top center;
   background-repeat: no-repeat;
