news card complete+ responsive newsevent

--- a/src/Components/Home/Connect/Connect.scss
+++ b/src/Components/Home/Connect/Connect.scss
@@ -54,6 +54,9 @@
     box-shadow: 10px 10px 10px rgba(0,0,0,0.1);
     border-radius: 1px;
     border: 20px solid #fff;
+    background-size: 20% 40%;
+    background-position: top right;
+    background-repeat: no-repeat;
 }
 
 .info{
