--- a/src/Components/Home/NewsEvent/Event/Event.scss
+++ b/src/Components/Home/NewsEvent/Event/Event.scss
@@ -1,12 +1,12 @@
 .event-card{
-    margin: 0 30px;
-    padding:0 30px;
-    width: 50%;
+    margin: 0 10px;
+    padding:0 20px;
+    width: 40%;
     background-color: #fff;
     box-sizing: border-box;
     border-radius: 5px;
     box-shadow: 3px 3px 3px rgba(0,0,0,0.1);
-    background-size: 25% 30%;
+    background-size: 25% 40%;
     background-position: top right;
     background-repeat: no-repeat;
     // background-color: #f6f6f6;
@@ -53,4 +53,10 @@
 }
 .event-heading{
     color:#194E56;
+}
+
+@media only screen and (max-width: 1000px) {
+    .event-card{
+        width: 100%;
+    }
 }
