--- a/src/Components/Home/NewsEvent/Newsevent.scss
+++ b/src/Components/Home/NewsEvent/Newsevent.scss
@@ -4,3 +4,12 @@
     justify-items: center;
     border: 0px ;
 }
+
+@media only screen and (max-width: 1000px) {
+    .wrap{
+        margin: 0 3rem 1rem 3rem;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+}
