--- a/src/Components/Home/NewsEvent/News/News.scss
+++ b/src/Components/Home/NewsEvent/News/News.scss
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: 'Gilroy';
-    src: url('../../../../fonts/Gilroy-Light.otf');
+    src: url('../../../../fonts/Gilroy-Light.otf') format('opentype');
 }
 //card-scss
 .news-card{
@@ -39,9 +39,11 @@
 .news-date{
     font-size: 1.1rem;
     color: #696969;
+    font-family: 'Gilroy';
 }
 .news-name{
     font-size: 1.3rem;
+    font-family: 'Gilroy';
 }
 
 .news-info p,.news-time-info p{
@@ -49,11 +51,9 @@
 }
 .news-info{
     padding: 0;
-    font-family: 'Gilroy';
 }
 .news-time-info{
     padding-right: 15px;
-    font-family: 'Gilroy';
 }
 
 @media only screen and (max-width: 1000px) {
