--- a/src/Components/Home/Gallery/Gallery.scss
+++ b/src/Components/Home/Gallery/Gallery.scss
@@ -1,3 +1,7 @@
+  @font-face {
+    font-family: 'Avenir';
+    src: url(../../../fonts/AvenirNextLTPro-Regular.otf) format('opentype');
+  }
   .galleryCarousel{
     position: relative;
     // margin-top: 100px;
@@ -15,10 +19,10 @@
   }
 
   .gallery h1 {
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    font-weight: 100;
+    font-size: 2.5rem;
+    font-family: 'Avenir';
+    color: #124F56;
+    font-weight: 300;
     padding-top: 20px;
     margin-left: 40px;
     margin-bottom: 20px;
@@ -29,10 +33,8 @@
     width: 110px;
     text-align: center;
     color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     font-size: 22px;
-    text-transform: uppercase;
     margin-left: 45px;
     padding: 5px 10px;
     margin-bottom: 84px;
@@ -58,11 +60,9 @@
     width: 135px;
     text-align: center;
     margin-top: 20px;
-    color: black;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #124F56;
     font-weight: 600;
     font-size: 22px;
-    text-transform: uppercase;
     padding: 10px 0;
     margin-left: 15px;
   }
