--- a/src/Components/NewsBlogs/NewsBlogs.scss
+++ b/src/Components/NewsBlogs/NewsBlogs.scss
@@ -6,7 +6,7 @@
 
   &-info {
     &-header {
-      @include font-config(6vh, 400, "ReemKufi", $color-font);
+      @include font-config(6vmin, 400, "ReemKufi", $color-font);
       line-height: 5vh;
     }
 
@@ -21,7 +21,7 @@
   &-footer {
     margin-top: 10%;
     text-align: center;
-    @include font-config(3vh, 400, "ReemKufi", $color-font);
+    @include font-config(3vmin, 400, "ReemKufi", $color-font);
   }
 }
 
@@ -37,6 +37,5 @@
 
 .container-text {
   @include font-config(2.5vmin, 100, none, black);
-  line-height: 23px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
