--- a/src/Components/NewsBlogs/NewsBlogs.scss
+++ b/src/Components/NewsBlogs/NewsBlogs.scss
@@ -12,7 +12,7 @@
 
     &-date {
       color: black;
-      font-size: 3vh;
+      font-size: 3vmin;
       font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
     }
