--- a/src/Components/Home/NewsEvent/Event/Event.scss
+++ b/src/Components/Home/NewsEvent/Event/Event.scss
@@ -37,6 +37,12 @@
     padding-bottom: 7px;
     font-size:20px;
 }
+.event-name a{
+    color: #000000;
+}
+.event-name a:hover{
+    color:#194E56;
+}
 .register-event-btn{
     font-family: 'Gilroy';
     background-color:#194E56;
@@ -51,7 +57,8 @@
     margin: 0;
 }
 .event-info{
-    border-left: 1px solid  #EAEAEA;
+    border-left: 1px solid #CECECE;
+
     padding-left: 15px;
 }
 .event-time-info{
