Added fe code for admin login and form for adding news

--- a/src/Components/Shared/Header/Header.scss
+++ b/src/Components/Shared/Header/Header.scss
@@ -40,7 +40,7 @@
     color: #ffff;
     font-size: 1rem;
     background-color: #18535B;
-    padding: 0 1rem;
+    padding: 0.5rem 1rem;
     border-width: 0;
 }
 .button:hover {
