--- a/src/Components/MeetAlumni/AlumniPage/AlumniPage.scss
+++ b/src/Components/MeetAlumni/AlumniPage/AlumniPage.scss
@@ -44,8 +44,7 @@
   }
 
   &-desc > p {
-    text-align: center;
-      margin-top: 5%;
+    margin-top: 5%;
     @include font-config(3vmin, 300, normal, black);
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
       sans-serif;
@@ -85,20 +84,13 @@
   width: 35px;
 }
 
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1000px) {
   .alumni-profile {
     flex-direction: column;
 
-    .alumni-name, .alumni-designation {
-      text-align: center;
-    }
-
-  }
-
-  .alumni-info {
-    &-description {
+    .alumni-name,
+    .alumni-designation {
       text-align: center;
     }
   }
-
 }
