--- a/src/Components/Admin/Slider/Slider.scss
+++ b/src/Components/Admin/Slider/Slider.scss
@@ -15,17 +15,20 @@
     display: none;
 }
 .admin-slider-img img{
-    max-height:180px;
-    width: 200px;
+    // height:190px;
+    // width: 270px;
+    width: 100%;
+    max-width: 300px;
+    height: 230px;
 }
 .admin-slider .wrapper{
     padding: 0;
-    flex: 5;
+    flex: 2;
     margin-top: 30px;
     display:grid;
     grid-gap: 1rem;
     justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
 }
 .admin-slider-img{
     position: relative;
