--- a/src/Components/Admin/Event/EventDashboard/EventDashboard.scss
+++ b/src/Components/Admin/Event/EventDashboard/EventDashboard.scss
@@ -23,6 +23,11 @@
     top: 10;
     height: 20px;
 }
+
+.events-container {
+    margin: 0 5% 0 5%;
+}
+
 @media only screen and (max-width:800px) {
     .all-event-info{
         width: 90%;
