Admin Login migrated to footer from Header

--- a/src/Components/Shared/Header/Header.scss
+++ b/src/Components/Shared/Header/Header.scss
@@ -28,6 +28,7 @@
 }
 .social {
     padding: 1.9rem 1rem 0rem 0rem;
+    margin-right: 2.5rem;
 }
 .social-icon {
     margin-left: 0.7rem;
@@ -90,7 +91,7 @@
         font-weight: 600;
     }
     .social {
-        margin: 1rem auto;
+        margin: 1rem 2.5rem;
     }
     .social-icon {
         margin-left: 0.7rem;
